adding margin bottom 2rem to card products on shop all page on max-width 600px
Former-commit-id: aea2d81270c43b3b3094146598eab91292f450bb
Former-commit-id: ebc6468ea07c16eba5137d23828c974b8d9520c0
Former-commit-id: f2e0f3a146f9b9a0db2bf969c4d9028c58f2367b
Former-commit-id: 046a088fd2a2b0a184f477bb80f0f987f4d2d4b1
Former-commit-id: d49ed1a2ce808f0971f13b13798d1faa03bf71db

--- a/assets/base.css
+++ b/assets/base.css
@@ -928,7 +928,7 @@ summary::-webkit-details-marker {
 	.grid .grid__item {
 		width: auto;
 		display: inline-block;
-		margin: 0 auto;
+		margin: 0 auto 2rem;
 		max-width: none;
 	}
 }
