displaying cart icon on mobile
Former-commit-id: f655cb848258998ae24fe55604e2b511eeb47448
Former-commit-id: 2effa95735fbdb9df60ed7829975a1d0fa4d0430

--- a/assets/base.css
+++ b/assets/base.css
@@ -6017,7 +6017,7 @@ sup {
 }
 
 @media all and (max-width: 500px) {
-	.nav-cart { padding-right: 0; background: none; text-align: right; }
+	.nav-cart { padding-right: 0; text-align: right; }
 
 	.fl-col a { font-size: 1.25rem; }
 	.copyright { border-top: 1px solid #E6B711; padding-top: 20px; text-align: center;  }
