adding videos to assets library in theme and implementing first draft of video header on the home page
Former-commit-id: 79f7f8c72b8062d1caf2331778d10e20d26ded36
Former-commit-id: d79e929b97e4e1504adec74610b090435a9f48f8
Former-commit-id: d05b94dc02ade48f57d08f4795998c531fb05274
Former-commit-id: b3b7642c370f6d73c91264666399f9cd00a239f0
Former-commit-id: 77b2deab86b4f1b9f1377fb48bf7d63e06aa457b
Former-commit-id: 48c0e8519ab7eb86b453096e6f8aafd178bb2b25

--- a/assets/base.css
+++ b/assets/base.css
@@ -6403,3 +6403,38 @@ a#cart-icon-bubble {
 	box-shadow: 0 0 5px 1px rgb(0 0 0 / 14%);
     border-radius: 2px;
 }
+
+.bgvid {
+	object-fit: cover;
+	height: 100%;
+	width: 100%;
+  
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+.video-wrapper {
+	/* Telling our absolute positioned video to 
+	be relative to this element */
+	position: relative;
+  
+	height: 640px;
+  
+	/* Will not allow the video to overflow the 
+	container */
+	overflow: hidden;
+  
+	/* Centering the container's content vertically 
+	and horizontally */
+	text-align: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+  }
+
+  .header-video {
+	position: relative;
+	color: white;
+	text-shadow: 1px 1px 8px rgba(0,0,0,0.6);
+  }
