adding margin bottom 4rem to video banner
Former-commit-id: a6c6f5a78b5e4d3368f70f96c034741ceaa07021
Former-commit-id: 8d4cd2a9de382e6c80aff4aaf8c4e073286931b1
Former-commit-id: 207a37d9597ebc308be2524ca5b44b0d9d67fb90
Former-commit-id: 616cd5c4b5415c0ca845b27269a26f864a037cba
Former-commit-id: 849d99bf818ac03e77e0ddda4e73c8927b81648c
Former-commit-id: bdd62f6d5420f2fcd93f82cbd7d9d3facafaab11

--- a/assets/base.css
+++ b/assets/base.css
@@ -6431,6 +6431,7 @@ a#cart-icon-bubble {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	margin-bottom: 4rem;
   }
 
   .header-video {
