removing type from js text replacement for sauna cover page
Former-commit-id: 788c2b6138d961dc6ac1f84737bec7fb043a19ad
Former-commit-id: bca9079a83e339e677e6e80bd47319394e7704cd
Former-commit-id: d496a07e3fbc8eb208d68228d0189d31bf3102f8
Former-commit-id: e263b9c808eec1f65e3d95fbfc4070292d05a067
Former-commit-id: 761cf84557dbb3a07b140e815307f5a65efb1ef5

--- a/snippets/product-page.liquid
+++ b/snippets/product-page.liquid
@@ -7,7 +7,7 @@
       if ( $(this).text() == "Plug Type:" ) {
           $(this).addClass('plug-' + i);
           $(this).text('Select your plug type:');
-      } else if( $(this).text() == "Curtain Type:" || $(this).text() == "Type:" ) {
+      } else if( $(this).text() == "Curtain Type:" ) {
           $(this).text('Select your curtain type:');
           $( "<style>#bcpo .bcpo-dropdown { order: unset;} }</style>" ).appendTo( "head" );      
       } else if( $(this).text() == "Voltage:") {
