mini cart updates and yotpo dark style border on reviews page

--- a/assets/dark.css
+++ b/assets/dark.css
@@ -92,6 +92,10 @@
   background-color: #000;	
 }	
 
+.dark .yotpo .yotpo-nav ul .yotpo-nav-tab.yotpo-active .yotpo-nav-wrapper {
+  border-bottom: 3px solid #fff !important;
+}
+
 .dark .pot-col-100 img, .dark .shopify-section .section-confirm-subscription > img, .dark .intro img, .dark .openings img, .dark .opening img {
    filter: brightness(0) invert(1);
 }		
