--- a/sections/home-template.liquid
+++ b/sections/home-template.liquid
@@ -9,11 +9,19 @@
             <source src="{{ 'sauna-space-home-hero.ogv' | asset_url }}" type="video/ogv">
         </video>
       <div class="header-video">
-        <h2>CTA Headliner goes here</h2>
-        <a href="#">Shop Now</a>
+        <p class="subtitle">Rejuventate at the cellular level</p>
+        <h1>Incandescent<br/> Infrared Therapy</h1>
+        <div class="video-links">
+            <a href="/products?filter=all" class="btn btn-outline">Shop Now</a><br />
+            <button class="btn-video">
+                <span class="btn-video-icon">
+                    <svg width="6" height="10" viewBox="0 0 6 10" xmlns="http://www.w3.org/2000/svg"><path d="M6 5l-6 5V0z" fill="currentColor" fill-rule="evenodd"></path></svg>
+                </span>
+                <span class="btn-video-text">Play Video</span>
+              </button>        </div>
       </div>
     </div>
-    <section>
+    <!-- <section>
         <div class="centered-text ct-home">
             <cms id='cms1'>
             <h2>Transcend the Ordinary</h2>
@@ -21,7 +29,7 @@
             <p style="margin-top: 2em;"><a href="/pages/infrared-saunas" class="bold-link arrow-link">See What We Mean</a></p>
             </cms cms1>
         </div>
-    </section>
+    </section> -->
 </div>
 
 <section class="section-three-panels">
