--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -112,6 +112,11 @@
 {%- endif -%}
 
 <div class="overlay hideMe"></div>
+{% if template == 'index' %}
+  <div class="site-header site-header-home">
+{% else %}
+  <div class="site-header">
+{% endif %}
 <div class="util-nav">
   <a href="/" class="logo nav-mobile"></a>
  
@@ -236,29 +241,6 @@
 
      
       {% render 'go-cart-button' %}
-      <!-- <a
-        href="{{ routes.cart_url }}"
-        class="header__icon header__icon--cart link focus-inset nav-cart aa"
-        id="cart-icon-bubble"
-      >
-        {%- liquid if cart == empty 
-          render 'icon-cart-empty' else 
-          render 'icon-cart' 
-          endif -%} 
-        Cart
-        <span class="visually-hidden">{{ "templates.cart.cart" | t }}</span>
-        {%- if cart != empty -%}
-        <div class="cart-count-bubble">
-          ({%- if cart.item_count < 100 -%}
-          <span aria-hidden="true">{{ cart.item_count }}</span>
-          {%- endif -%}
-          <span class="visually-hidden as">{{
-            "sections.header.cart_count" | t: count:cart.item_count
-          }}</span>)
-            <span class="cart-price"> {{ cart.total_price | money }}</span>
-        </div> 
-        {%- endif -%}
-      </a> -->
        
       <div class="nav-full-cart hideMe"></div>
   
@@ -495,45 +477,94 @@
     </div>
   </div>
 </div>
+</div>
 
 {%- render 'cart-notification', color_scheme: section.settings.color_scheme -%}
-{% javascript %} class StickyHeader extends HTMLElement { constructor() {
-super(); } connectedCallback() { this.header =
-document.getElementById('shopify-section-header'); this.headerBounds = {};
-this.currentScrollTop = 0; this.preventReveal = false; this.predictiveSearch =
-this.querySelector('predictive-search'); this.onScrollHandler =
-this.onScroll.bind(this); this.hideHeaderOnScrollUp = () => this.preventReveal =
-true; this.addEventListener('preventHeaderReveal', this.hideHeaderOnScrollUp);
-window.addEventListener('scroll', this.onScrollHandler, false);
-this.createObserver(); } disconnectedCallback() {
-this.removeEventListener('preventHeaderReveal', this.hideHeaderOnScrollUp);
-window.removeEventListener('scroll', this.onScrollHandler); } createObserver() {
-let observer = new IntersectionObserver((entries, observer) => {
-this.headerBounds = entries[0].intersectionRect; observer.disconnect(); });
-observer.observe(this.header); } onScroll() { const scrollTop =
-window.pageYOffset || document.documentElement.scrollTop; if
-(this.predictiveSearch && this.predictiveSearch.isOpen) return; if (scrollTop >
-this.currentScrollTop && scrollTop > this.headerBounds.bottom) { if
-(this.preventHide) return; requestAnimationFrame(this.hide.bind(this)); } else
-if (scrollTop < this.currentScrollTop && scrollTop > this.headerBounds.bottom) {
-if (!this.preventReveal) { requestAnimationFrame(this.reveal.bind(this)); } else
-{ window.clearTimeout(this.isScrolling); this.isScrolling = setTimeout(() => {
-this.preventReveal = false; }, 66); requestAnimationFrame(this.hide.bind(this));
-} } else if (scrollTop <= this.headerBounds.top) {
-requestAnimationFrame(this.reset.bind(this)); } this.currentScrollTop =
-scrollTop; } hide() { this.header.classList.add('shopify-section-header-hidden',
-'shopify-section-header-sticky'); this.closeMenuDisclosure();
-this.closeSearchModal(); } reveal() {
-this.header.classList.add('shopify-section-header-sticky', 'animate');
-this.header.classList.remove('shopify-section-header-hidden'); } reset() {
-this.header.classList.remove('shopify-section-header-hidden',
-'shopify-section-header-sticky', 'animate'); } closeMenuDisclosure() {
-this.disclosures = this.disclosures ||
-this.header.querySelectorAll('header-menu'); this.disclosures.forEach(disclosure
-=> disclosure.close()); } closeSearchModal() { this.searchModal =
-this.searchModal || this.header.querySelector('details-modal');
-this.searchModal.close(false); } } customElements.define('sticky-header',
-StickyHeader); {% endjavascript %}
+{% javascript %} 
+class StickyHeader extends HTMLElement {
+  constructor() {
+      super();
+  }
+  connectedCallback() {
+      this.header =
+          document.getElementById('shopify-section-header');
+      this.headerBounds = {};
+      this.currentScrollTop = 0;
+      this.preventReveal = false;
+      this.predictiveSearch =
+          this.querySelector('predictive-search');
+      this.onScrollHandler =
+          this.onScroll.bind(this);
+      this.hideHeaderOnScrollUp = () => this.preventReveal =
+          true;
+      this.addEventListener('preventHeaderReveal', this.hideHeaderOnScrollUp);
+      window.addEventListener('scroll', this.onScrollHandler, false);
+      this.createObserver();
+  }
+  disconnectedCallback() {
+      this.removeEventListener('preventHeaderReveal', this.hideHeaderOnScrollUp);
+      window.removeEventListener('scroll', this.onScrollHandler);
+  }
+  createObserver() {
+      let observer = new IntersectionObserver((entries, observer) => {
+          this.headerBounds = entries[0].intersectionRect;
+          observer.disconnect();
+      });
+      observer.observe(this.header);
+  }
+  onScroll() {
+      const scrollTop =
+          window.pageYOffset || document.documentElement.scrollTop;
+      if (this.predictiveSearch && this.predictiveSearch.isOpen) return;
+      if (scrollTop >
+          this.currentScrollTop && scrollTop > this.headerBounds.bottom) {
+          if (this.preventHide) return;
+          requestAnimationFrame(this.hide.bind(this));
+      } else
+      if (scrollTop < this.currentScrollTop && scrollTop > this.headerBounds.bottom) {
+          if (!this.preventReveal) {
+              requestAnimationFrame(this.reveal.bind(this));
+          } else {
+              window.clearTimeout(this.isScrolling);
+              this.isScrolling = setTimeout(() => {
+                  this.preventReveal = false;
+              }, 66);
+              requestAnimationFrame(this.hide.bind(this));
+          }
+      } else if (scrollTop <= this.headerBounds.top) {
+          requestAnimationFrame(this.reset.bind(this));
+      }
+      this.currentScrollTop =
+          scrollTop;
+  }
+  hide() {
+      this.header.classList.add('shopify-section-header-hidden',
+          'shopify-section-header-sticky');
+      this.closeMenuDisclosure();
+      this.closeSearchModal();
+  }
+  reveal() {
+      this.header.classList.add('shopify-section-header-sticky', 'animate');
+      this.header.classList.remove('shopify-section-header-hidden');
+  }
+  reset() {
+      this.header.classList.remove('shopify-section-header-hidden',
+          'shopify-section-header-sticky', 'animate');
+  }
+  closeMenuDisclosure() {
+      this.disclosures = this.disclosures ||
+          this.header.querySelectorAll('header-menu');
+      this.disclosures.forEach(disclosure => disclosure.close());
+  }
+  closeSearchModal() {
+      this.searchModal =
+          this.searchModal || this.header.querySelector('details-modal');
+      this.searchModal.close(false);
+  }
+}
+customElements.define('sticky-header',
+  StickyHeader);
+{% endjavascript %}
 
 <script type="application/ld+json">
   {
