html5 video updates to scolling header
Former-commit-id: f33612d75174e47e9f6b0986d282efac0d1259ce
Former-commit-id: 90aa9758e153a1490495325513c30fe9a1674fa3

--- a/assets/component-list-menu.css
+++ b/assets/component-list-menu.css
@@ -23,7 +23,9 @@
     background-image: url(cart.svg);
     background-repeat: no-repeat;
 }
-
+.header-scroll .util-nav {
+  display: none;
+}
 
 .list-menu--right {
   right: 0;
