--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -113,7 +113,7 @@
 
 <div class="overlay hideMe"></div>
 {% if template == 'index' %}
-  <div class="site-header site-header-home">
+  <div class="site-header site-header-home" id="header-home">
 {% else %}
   <div class="site-header">
 {% endif %}
