--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -397,6 +397,7 @@
     // Get the header
     var header = document.getElementById("topNavBG");
     var mains = document.getElementById("MainContent");
+    var header_home = document.getElementById("header-home");
 
     // Get the offset position of the navbar
     var sticky = header.offsetTop;
@@ -406,9 +407,11 @@
       if (window.pageYOffset > sticky) {
         header.classList.add("sticky");
         mains.classList.add("sticky");
+        header_home.classList.add('header-scroll');
       } else {
         header.classList.remove("sticky");
         mains.classList.remove("sticky");
+        header_home.classList.remove('header-scroll');
       }
     }
   }
