--- a/sections/home-template.liquid
+++ b/sections/home-template.liquid
@@ -13,7 +13,7 @@
         <h1>Incandescent<br/> Infrared Therapy</h1>
         <div class="video-links">
             <a href="/products?filter=all" class="btn btn-outline">Shop Now</a><br />
-            <button class="btn-video">
+            <button class="btn-video" id="myBtn">
                 <span class="btn-video-icon">
                     <svg width="6" height="10" viewBox="0 0 6 10" xmlns="http://www.w3.org/2000/svg"><path d="M6 5l-6 5V0z" fill="currentColor" fill-rule="evenodd"></path></svg>
                 </span>
@@ -21,6 +21,8 @@
               </button>        </div>
       </div>
     </div>
+    {% render 'home-page-modal' %}
+
     <!-- <section>
         <div class="centered-text ct-home">
             <cms id='cms1'>
