--- a/assets/base.css
+++ b/assets/base.css
@@ -983,6 +983,10 @@ summary::-webkit-details-marker {
   width: calc(50% - var(--grid-mobile-horizontal-spacing) / 2);
 }
 
+.featured-grid {
+	list-style: none;
+}
+
 @media screen and (min-width: 750px) {
   .grid--2-col .grid__item {
     width: calc(50% - var(--grid-desktop-horizontal-spacing) / 2);
@@ -6512,8 +6516,12 @@ a#cart-icon-bubble {
 	z-index: 2;
   }
 
-  .header-video h2 {
+  .header-video h1 {
 	text-align: left;
+  }
+
+  .header-video h1 span, .header-video-subtitle, .btn-shop, .btn-video {
+	opacity: 0;
   }
 
   .header-video p {
@@ -6592,3 +6600,4 @@ a#cart-icon-bubble {
 .btn-video-text {
 	color: #fff;
 }
+
