--- a/snippets/home-page-modal.liquid
+++ b/snippets/home-page-modal.liquid
@@ -4,7 +4,7 @@
     <!-- Modal content -->
     <div class="modal-content">
       <span class="close">&times;</span>
-      <iframe width="100%" height="315" src="https://www.youtube.com/embed/h1UpeW7mykA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="100%" height="475" src="https://www.youtube.com/embed/h1UpeW7mykA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
   
   </div>
@@ -26,20 +26,21 @@
 
 /* Modal Content/Box */
 .modal-content {
-  background-color: #fefefe;
+  background-color: transparent;
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
-  border: 1px solid #888;
-  max-width: 600px;
-  width: 80%; /* Could be more or less, depending on screen size */
+  max-width: 800px;
+  width: 100%; /* Could be more or less, depending on screen size */
 }
 
 /* The Close Button */
 .close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+  color: #fff;
+    float: right;
+    font-size: 35px;
+    position: relative;
+    right: -30px;
+    top: 25px;
 }
 
 .close:hover,
