--- a/sections/home-template.liquid
+++ b/sections/home-template.liquid
@@ -3,7 +3,7 @@
 
 <div class="">
     <div class="video-wrapper">
-        <video playsinline autoplay muted loop poster="{{ 'sauna-space-hero.png' | asset_url }}" class="bgvid">
+        <video playsinline autoplay muted loop preload="none" poster="{{ 'sauna-space-hero.png' | asset_url }}" class="bgvid">
             <source src="{{ 'sauna-space-home-hero.mp4' | asset_url }}" type="video/webm">
             <source src="{{ 'sauna-space-home-hero.webm' | asset_url }}" type="video/mp4">
             <source src="{{ 'sauna-space-home-hero.ogv' | asset_url }}" type="video/ogv">
