--- a/sections/home-template.liquid
+++ b/sections/home-template.liquid
@@ -3,7 +3,7 @@
 <link href="https://vjs.zencdn.net/7.20.2/video-js.css" rel="stylesheet" />
 <div class="">
     <div class="video-wrapper">
-        <video playsinline autoplay muted loop preload="none" poster="{{ 'sauna-space-hero.png' | asset_url }}" class="bgvid video-js vjs-fill">
+        <video playsinline autoplay muted loop preload="auto" data-setup poster="{{ 'sauna-space-hero.png' | asset_url }}" class="bgvid video-js vjs-fill">
             <source src="{{ 'sauna-space-home-hero.mp4' | asset_url }}" type="video/webm">
             <source src="{{ 'sauna-space-home-hero.webm' | asset_url }}" type="video/mp4">
             <source src="{{ 'sauna-space-home-hero.ogv' | asset_url }}" type="video/ogv">
