--- a/sections/home-template.liquid
+++ b/sections/home-template.liquid
@@ -5,6 +5,7 @@
     <div class="vidseo-wrapper">
         <video playsinline autoplay muted loop preload="auto" data-setup="{}" poster="{{ 'sauna-space-hero.png' | asset_url }}" class="bgvid video-js vjs-fill">
             <source src="{{ 'sauna-space-home-hero.mp4' | asset_url }}" type="video/mp4">
+            <source src="{{ 'sauna-space-home-hero.webm' | asset_url }}" type="video/webm">
             <source src="{{ 'sauna-space-home-hero.ogv' | asset_url }}" type="video/ogv">
             <p class="vjs-no-js">
               To view this video please enable JavaScript, and consider upgrading to a
