safari video test
Former-commit-id: 6e43eda3426e519ec3171c61cf7b446e16818733
Former-commit-id: baa18a8f02d18405fd852914a483dea4e8ff08ef
Former-commit-id: a1ed405cadcfb2c98fd50dc5b403eb2708abb17f
Former-commit-id: c24410dcf90d3072dca7e7f96aa810f017529367
Former-commit-id: add62cb54d9d78c98b1ae9bfc585967864fc96a8
Former-commit-id: 4d15804ec258966b9623ac69340d610d60029632

--- a/assets/base.css
+++ b/assets/base.css
@@ -985,6 +985,7 @@ summary::-webkit-details-marker {
 
 .featured-grid {
 	list-style: none;
+	margin-bottom: 1em;
 }
 
 @media (max-width: 767px) {
