safari video test
Former-commit-id: adba94e35f02e4f69ebb3e5167caf38d428cd02d
Former-commit-id: d4318448d44db71728acec914a243b9e32b3ef70
Former-commit-id: 7898c57714219c71b50608c42569544f7207dbac
Former-commit-id: 7f9b7114f18c1ebb23f005f98e8134c2ef7a73e6
Former-commit-id: 00061e86e2d0fb8b5269eadc9688ee060de01cc6
Former-commit-id: 9e219f915c6fff42fb235133cb10cc7c4ee94dcf

--- a/sections/home-template.liquid
+++ b/sections/home-template.liquid
@@ -1,20 +1,13 @@
 {{ 'pin-animation.css' | asset_url | stylesheet_tag }}
 {{ 'animate.css' | asset_url | stylesheet_tag }}
-<link href="https://vjs.zencdn.net/7.20.2/video-js.css" rel="stylesheet" />
+  <link href="https://vjs.zencdn.net/7.20.2/video-js.css" rel="stylesheet" />
 <div class="">
-    <div class="vidseo-wrapper">
-        <video playsinline autoplay muted loop preload="auto" data-setup="{}" poster="{{ 'sauna-space-hero.png' | asset_url }}" class="bgvid video-js vjs-fill">
+    <div class="video-wrapper">
+        <video playsinline autoplay muted loop preload="none" poster="{{ 'sauna-space-hero.png' | asset_url }}" class="bgvid">
             <source src="{{ 'sauna-space-home-hero.mp4' | asset_url }}" type="video/mp4">
             <source src="{{ 'sauna-space-home-hero.webm' | asset_url }}" type="video/webm">
             <source src="{{ 'sauna-space-home-hero.ogv' | asset_url }}" type="video/ogv">
-            <p class="vjs-no-js">
-              To view this video please enable JavaScript, and consider upgrading to a
-              web browser that
-              <a href="https://videojs.com/html5-video-support/" target="_blank"
-                >supports HTML5 video</a
-              >
-            </p>
-          </video>
+        </video>
       <div class="header-video">
         <p class="header-video-subtitle header-one header-slide">Rejuvenate at the cellular level</p>
         
@@ -34,7 +27,7 @@
       </div>
     </div>
     {% render 'home-page-modal' %}
-    <script src="https://vjs.zencdn.net/7.20.2/video.min.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script>
     // Wrap every letter in a span
