mobile nav to not be fixed.
Former-commit-id: a1eae1adaf7869ee27f996ce41a3b584385129a7
Former-commit-id: 121455ffe4d1b0fffc69a1a1db3ad599c77ba0ea
Former-commit-id: 11f27358f3b8114643b9621e51ec8bbb4efcfd82
Former-commit-id: 14c4d8a9bfa44741951856a779e8ddf791e4e0b2
Former-commit-id: 5c0404261e23d91df73394c6aa31ca312d64efde
Former-commit-id: a9d59b12dc3de52c8025fcf19a63cf267753c4cd

--- a/assets/base.css
+++ b/assets/base.css
@@ -2169,6 +2169,8 @@ input[type='checkbox'] {
   transition: transform 0.15s ease-out;
 }
 
+@media (min-width: 768px) {
+
 .site-header-home {
 	position: fixed;
 	width: 100%;
@@ -2200,7 +2202,7 @@ input[type='checkbox'] {
 .site-header-home .logo {
 	background-image: url("https://cdn.shopify.com/s/files/1/0026/7229/6025/files/sp-logo-white.svg?v=1652789731");
 }
-
+}
 /* Main Header Layout */
 .header-wrapper {
   display: block;
