mobile nav transparent on home page only
Former-commit-id: c1d706bdfa2b0143874d6be27adf7d046e43785c
Former-commit-id: 8b8adf5d1e5ae49a9c808f9f74c0eccda89fdd38
Former-commit-id: bed28190a58cd1532b108ddb29f5422f6319b3a1
Former-commit-id: 3e46097fa1088b68b950e59f51146534ab200d44
Former-commit-id: e3e068ef2a797d3bb63dd6da40e4e33ac9344514
Former-commit-id: 037c275491ce991365abd6aa4f0db8c02967a57b

--- a/assets/base.css
+++ b/assets/base.css
@@ -2169,6 +2169,43 @@ input[type='checkbox'] {
   transition: transform 0.15s ease-out;
 }
 
+.site-header-home {
+	position: fixed;
+	width: 100%;
+}
+
+.site-header-home .hamb-label { 
+	filter: brightness(0) invert(1); 
+  }
+
+.site-header-home .navBG {
+	border-bottom: 0;
+}
+
+.site-header-home .navBG {
+	background: transparent;
+}
+
+.site-header-home .util-nav-link, .site-header-home .nav-link {
+	color: #fff;
+}
+
+.site-header-home .nav-link:hover {
+	border-bottom: 4px solid #fff;
+}
+
+.site-header-home .nav-arrow path, .site-header-home .nav-close path {
+	stroke: #fff;
+}
+.site-header-home .nav-cart {
+    background-image: url(https://cdn.shopify.com/s/files/1/0567/1865/5531/files/cart_white.svg);
+    background-repeat: no-repeat;
+}
+.site-header-home .logo {
+	background-image: url("https://cdn.shopify.com/s/files/1/0026/7229/6025/files/sp-logo-white.svg?v=1652789731");
+}
+
+
 @media (min-width: 768px) {
 
 .site-header-home {
