mobile nav - making not sticky
Former-commit-id: 1cfe86d18cec4ccacc509672b5220a79d55a31b4
Former-commit-id: 2c9fddb2770ea911bea0bab3557d561b5f896804
Former-commit-id: 95974c5e20cdc3e304c10c50550cffd7e3d026cf
Former-commit-id: 30eb3d5ebd575c5cde023e0fab1668585ad43620
Former-commit-id: 78a81297e0ea0bf254887e31a2fa73536ef2ae61
Former-commit-id: 0a334769a48b7974147ba88f7c06c6ea1cfed07f

--- a/assets/component-list-menu.css
+++ b/assets/component-list-menu.css
@@ -2,6 +2,16 @@
     position: fixed;
     width: 100%;
 }
+@media (max-width: 767px) {
+  .site-header-home .navBG.sticky {
+    position: static;
+    width: 100%;
+  }
+  .site-header-home {
+    position: absolute;
+  }
+}
+
 
 .site-header-home .navBG.sticky {
   background: #FFF;
