minicart alignment on item price
Former-commit-id: 9242d7f68a84eaa0a4f2771efb1bc90aa4e675f5
Former-commit-id: 62f67d8c5ab650a7b681e8537701bd1566c2706c
Former-commit-id: c09ecc6d868908a15906a6925f7c0b0b70a5ee48
Former-commit-id: 0aa70e92847fc1345e5dd255cb0daafd3c8a0d80
Former-commit-id: ceb871a750ffda6212826cb259c72c8c919a1d89
Former-commit-id: b195ff4d9fd2aba41de5bcd03e7f217ac16fc202

--- a/assets/gocart.css
+++ b/assets/gocart.css
@@ -249,7 +249,8 @@
     max-width: 250px;
     line-height: 1.18;
     text-align: left;
-    padding: 0px 10px 0px 20px;
+    padding: 0px 0 0px 20px;
+    width: 100%;
   }
   .go-cart-item__image {
     min-width: 90px;
