js script to autoplay html5 video on safari in low power mode
Former-commit-id: a73e932b8619694dd1d87e53d0d9423e43d42319
Former-commit-id: d6c6a823a32bd7d5a6accbedf202270f537c62c9
Former-commit-id: e96bc2b6aab4d640766dcfa2066b9d1eb81af275
Former-commit-id: c8a6fee2038fea3c81a2d2dad1b80b0e8b3935f7
Former-commit-id: d6c07ca322000a002eba9d7030973ed1af4582d4
Former-commit-id: d567b9d5df74102977ad479f988521b95590fa34

--- a/sections/home-template.liquid
+++ b/sections/home-template.liquid
@@ -3,7 +3,7 @@
   <link href="https://vjs.zencdn.net/7.20.2/video-js.css" rel="stylesheet" />
 <div class="">
     <div class="video-wrapper">
-        <video playsinline autoplay muted loop preload="none" poster="{{ 'sauna-space-hero.png' | asset_url }}" class="bgvid">
+        <video playsinline autoplay muted loop preload="none" poster="{{ 'sauna-space-hero.png' | asset_url }}" class="bgvid" id="saunavid">
             <source src="{{ 'sauna-space-home-hero.mp4' | asset_url }}" type="video/mp4">
             <source src="{{ 'sauna-space-home-hero.webm' | asset_url }}" type="video/webm">
             <source src="{{ 'sauna-space-home-hero.ogv' | asset_url }}" type="video/ogv">
