--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -161,6 +161,10 @@ div#bcpo-select-option-0 ul li span {
   padding-bottom: 0;
 }
 
+.product__info-wrapper .price__regular .price-item--regular  {
+  font-size: 18px !important;
+}
+
 @media screen and (min-width: 750px) {
   .product--thumbnail .product__media-gallery,
   .product--thumbnail_slider .product__media-gallery,
