out of stock message display issue on metafield product page template
Former-commit-id: fa8c6ca851c17409b676fdc1907fb4705da8972e
Former-commit-id: 90fbf7413534ac8ba6ac8206c23a3e647f72b167
Former-commit-id: e9e22a280af52c3b90b120df473e24ac18e5e5b1
Former-commit-id: b58bdffb2c75b2fccb52bff819ed1c63108be4a6
Former-commit-id: 35ea6ddf482aa61c6afe5524de0c0a451f5494a6
Former-commit-id: 20e99c0f10b34c0b37491a512177203225000d13

--- a/sections/metafield-product.liquid
+++ b/sections/metafield-product.liquid
@@ -451,6 +451,14 @@
                 {%- form 'product', product, id: product_form_id, class: 'form', novalidate: 'novalidate', data-type: 'add-to-cart-form' -%}
                   <input type="hidden" name="id" value="{{ product.selected_or_first_available_variant.id }}" disabled>
                   <div class="product-form__buttons">
+                    {% if product.selected_or_first_available_variant.available == false %}
+                    <div class="atc-outOfStock">
+						
+                      <p><strong>Sorry, this item is out of stock.</strong></p>
+                    
+                  </div>
+                    
+                    {% else %}
                     <button
                       type="submit"
                       name="add"
@@ -470,6 +478,7 @@
                           </svg>
                         </div>
                     </button>
+                    {% endif %}
                     <div class="stickyBG">
                       <div class="sticky-add-to-cart">
                         <div class="sac-product">{{ product.title | escape }}<span class="sac-color"></span></div>
