--- a/sections/targeted-page.liquid
+++ b/sections/targeted-page.liquid
@@ -103,7 +103,7 @@
 						  {%- endif -%}
 					  
 						  <li class="grid__item">
-							{% render 'card-product',
+							{% render 'card-product-simple',
 							  card_product: product,
 							  media_aspect_ratio: section.settings.image_ratio,
 							  show_secondary_image: section.settings.show_secondary_image,
