product recommendations adding back in.
Former-commit-id: 99a1c92fc0298fb01cb7a564e735bf91d1d37a20
Former-commit-id: 2725c8d78d46df56e14e570d8789647ed6a75923

--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -678,6 +678,7 @@
 
 
 
+{% render 'product-recommendations' %}
 
 {% unless product.tags contains 'Refurbished' %}
   <section class="yotpo-containers section-{{ section.id }}-padding">
