--- a/sections/metafield-product.liquid
+++ b/sections/metafield-product.liquid
@@ -760,6 +760,7 @@
   	{% if product.metafields.my_fields.features_section_4 != blank %}
 		{{ product.metafields.my_fields.features_section_4 }}
     {% endif %}
+    {% render 'product-recommendations' %}
 
     {% unless product.tags contains 'Refurbished' %}
   
