--- a/assets/section-blog-post.css
+++ b/assets/section-blog-post.css
@@ -173,3 +173,17 @@
 .article-template__back:last-child {
   margin-bottom: 3.2rem;
 }
+.article-template__content h1 {
+  color: #000;
+  text-transform: none;
+}
+
+.article-template__content h2 {
+  text-align: left;
+}
+
+.article-template__content figcaption {
+  font-size: 14px;
+  color: #ddd;
+  font-style: italic;
+}
