h1 style update on blog
Former-commit-id: 1ef9cf8b1168adda8874a2ce18c9c3bcca23dba0
Former-commit-id: 19b43cfc05d3307bfd8209dff3c6730142acc7a5
Former-commit-id: 0108a481314ffa5c04e0cce00bca840e0bfdc960
Former-commit-id: c8b644608163d73ddd007d521658f238a837a5d7
Former-commit-id: 6559ecfc1d2d9412861c6597df66355562520b00
Former-commit-id: 82fd83905c84dfce665b996195c1c0210c7b6c37

--- a/assets/section-blog-post.css
+++ b/assets/section-blog-post.css
@@ -173,7 +173,7 @@
 .article-template__back:last-child {
   margin-bottom: 3.2rem;
 }
-.article-template__content h1 {
+h1.article-template__title {
   color: #000;
   text-transform: none;
 }
