--- a/sections/main-blog.liquid
+++ b/sections/main-blog.liquid
@@ -16,10 +16,25 @@
   }
 {%- endstyle -%}
 
+<div class="navbar-inner">
+  <div class="container">
+
+      <div class="navbar-center-wrapper">
+      <div class="navbar-collapse collapse"><ul id="menu-header-menu-1" class="nav"><li id="mgt-menu-item-613" class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="What’s New" href="https://blog.sauna.space/category/whats-new/">What’s New</a></li><li id="mgt-menu-item-612" class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="Sauna Science" href="https://blog.sauna.space/category/sauna-science/">Sauna Science</a></li><li id="mgt-menu-item-472" class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="Products" href="https://blog.sauna.space/category/products/">Products</a></li><li id="mgt-menu-item-611" class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="Lifestyle" href="https://blog.sauna.space/category/lifestyle/">Lifestyle</a></li></ul></div>                  </div>
+
+  </div>
+</div>
+
+<div class="header-blog">
+
+  <p>Brian Richards Presents:</p>
+  <h1>The Wavelength</h1>
+  <p>Powered by SaunaSpace</p>
+
+</div>
+
 {%- paginate blog.articles by 6 -%}
   <div class="main-blog page-width section-{{ section.id }}-padding">
-    <h1 class="title--primary">{{ blog.title | escape }}</h1>
-
     <div class="blog-articles {% if section.settings.layout == 'collage' %}blog-articles--collage{% endif %}">
       {%- for article in blog.articles -%}
         <div class="blog-articles__article article">
